Bug 786913 - Fix Azure short-circuiting of 0px fonts. r=roc